<resources>
    <string name="app_name">CleanBoost</string>
    <string name="title_home">Home</string>
    <string name="title_storage">Storage</string>
    <string name="title_cpu">Cpu</string>
    <string name="title_battery">Battery</string>
    <string name="title_vpn">Vpn</string>
    <string name="phone_opt">Phone optimization:</string>
    <string name="status_poor">POOR</string>
    <string name="status_ok">OK</string>
    <string name="status_good">GOOD</string>
    <string name="scan">SCAN</string>
    <string name="home">Not scanned since yesterday</string>
    <string name="cpu_btn">CPU Speed</string>
    <string name="storage_btn">Free Storage</string>
    <string name="battery_btn">Boost Battery</string>
    <string name="vpn_btn">Safe Browse</string>
    <string name="boost">Boost</string>
    <string name="junk">Junk</string>
    <string name="temp_files">Temp Files</string>
    <string name="apk_files">Apk Files</string>
    <string name="app_residual">App Residual</string>
    <string name="app_cache">App Cache</string>
    <string name="scanning">Scanning</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>