<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_storage"
        android:icon="@drawable/ic_storage"
        android:title="@string/title_storage" />

    <item
        android:id="@+id/navigation_cpu"
        android:icon="@drawable/ic_cpu"
        android:title="@string/title_cpu" />
    <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_vpn"
        android:icon="@drawable/ic_vpn"
        android:title="@string/title_vpn" />
    <item
        android:id="@+id/navigation_battery"
        android:icon="@drawable/ic_battery"
        android:title="@string/title_battery" />

</menu>